cloud/deploy/ingress/ingress-resource-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: fruits.bobaklabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fruit-app
            port: 
              number: 1323
